# CircLapse

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml  test_example.py
circelizer/: __init__.py  cli.py  context.py  detector.py  disk_image.py  image_operators.py  processor.py  saving.py  settings.py
circlapse/: __init__.py  cli.py  context.py  detector.py  image_operators.py  processor.py  saving.py  settings.py
tests/: __init__.py  test_image_operators.py
