[project]
name = "circelizer"
version = "0.1.0"
description = "A library for detecting circles in images and centering them"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.3.1",
    "opencv-python>=4.11.0.86",
    "pillow>=11.3.0",
    "scikit-image>=0.22.0",
]

[project.scripts]
circelizer = "circelizer.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.mypy]
python_version = "3.12"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = false
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = false

[[tool.mypy.overrides]]
module = [
    "cv2.*",
    "PIL.*",
    "skimage.*",
    "numpy.*",
]
ignore_missing_imports = true

[dependency-groups]
commit = [
    "pre-commit>=4.2.0",
]
